Table users {
  id            String [primary key]
  firstName     String [not null]
  lastName      String [not null]
  phoneNumber   String [not null]
  email         String [not null]
  password      String [not null]
  organizations String[]
  role          ROLE [default: 'ADMIN']
  createdAt     DateTime
  updatedAt     DateTime
}

Table organizations {
  id        String [primary key]
  userId   string [not null]
  orgName   String [not null]
  slug      String [not null]
  modules   MODULES [default: 'HR']
  status    STATUS [default: 'ACTIVE']
}

Table departments {
  id  String [primary key]
  orgId String [not null]
  departmentName String [not null]
  description String [not null]
  status STATUS [default: 'ACTIVE']
}

Table employees {
  id String [primary key]
  orgId String [not null]
  departmentId String [not null]
  employeeId String [not null]
  reportsTo String
  firstName String [not null]
  lastName String [not null]
  email String [not null]
  phoneNumber String [not null]
  role String [not null]
  docs DOCUMENT_TYPE [default: 'ID_CARD']
  employmentStatus EMPLOYMENT_STATUS [default: 'FULL_TIME']
  employmentEndDate DateTime
  status    STATUS [default: 'ACTIVE']
  createdAt DateTime
  updatedAt DateTime
}

enum ROLE {
  ADMIN
  FINANCE
  MARKETING
  IT
}

enum MODULES {
  HR
  FINANCE
  TECH
  AGILE
}

enum DOCUMENT_TYPE {
  ID_CARD
  PASSPORT
  DRIVING_LICENSE
}

enum STATUS {
  ACTIVE
  SUSPENDED
}

enum EMPLOYMENT_STATUS {
  FULL_TIME
  PART_TIME
  CONTRACT
  INTERNSHIP
}

Ref: "organizations"."userId" < "users"."id"
Ref: "employees"."departmentId" < "departments"."id"
Ref: "employees"."orgId" < "organizations"."id"
Ref: "departments"."orgId" < "organizations"."id"